--- a/src/pug/mixins/_prod-card.pug
+++ b/src/pug/mixins/_prod-card.pug
@@ -1,4 +1,5 @@
 mixin product(img)
+	//===== card ======
 	.prod-card&attributes(attributes)
 		//====slider single product===
 		.swiper.slider
@@ -10,11 +11,11 @@ mixin product(img)
 				//====slide====
 				.swiper-slide
 					.prod-card__img
-						img.lazy(src="./img/"+ img +".webp", width="370" height="560" alt="img")
+						img.lazy(src="./img/"+ img +".webp", width="450" height="640" alt="img")
 				//====slide====
 				.swiper-slide
 					.prod-card__img
-						img.lazy(src="./img/"+ img +".webp", width="370" height="560" alt="img")
+						img.lazy(src="./img/"+ img +".webp", width="450" height="640" alt="img")
 			//==== pagination===
 			.swiper-pagination.slider-pagination
 		//=====product info=====
