--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -5,13 +5,32 @@
 	padding-bottom: 5px;
 }
 .prod-card{
+	grid-column: span 3;
+	// width: auto;
 	&__img{
 		width: 100%;
 		aspect-ratio: 45 / 64;
+		display: flex;
+		justify-content: center;
 		img{
-			width: 100%;
-			height: 100%;
+			width: 450px;
+			aspect-ratio: 45 / 64;
 			object-fit: contain;
+		}
+		@media (max-width: 1199px) {
+			padding: 40px;
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
+			}
+		}
+		@media (max-width: 1023px) {
+			padding: 24px;
+		}
+		@media (max-width: 767px) {
+			aspect-ratio: 17 / 24;
+			padding: 4px;
 		}
 	}
 	&__footer{
@@ -27,9 +46,17 @@
 		.semi-16{
 			flex-grow: 1;
 		}
+		@media (max-width: 767px) {
+		flex-direction: column;
+		row-gap:4px;
+		}
 	}
 	.slider{
 		padding-bottom: 10px;
+	}
+	@media (max-width: 1199px) {
+		grid-column: span 6;
+		
 	}
 }
 
@@ -41,6 +68,9 @@
 		img{
 			width: 100%;
 			height: 100%;
+		}
+		@media (max-width: 1199px) {
+			grid-column: span 12;
 		}
 	}
 }
