--- a/src/scss/blocks/_swiper.scss
+++ b/src/scss/blocks/_swiper.scss
@@ -1,8 +1,8 @@
-.swiper .swiper-pagination {
+.swiper  {
 	z-index: 5;
 
 	.swiper-pagination-bullets {
-		bottom: -5px;
+		bottom: -5px!important;
 	}
 
 	.swiper-pagination-bullet {
@@ -14,6 +14,9 @@
 		margin-right: 2px;
 		transition: .3s;
 		border-radius: 1px;
+		@media (max-width: 767px) {
+			width: 40px;
+		}
 	}
 
 	.swiper-pagination-bullet-active {
