fix-chevron-link

--- a/src/pug/ui/typography.pug
+++ b/src/pug/ui/typography.pug
@@ -104,13 +104,25 @@ html(lang="ru")
 						.link-item Ссылка с подчеркиванием по наведению
 					hr
 					h3 ссылка со стрелкой спрфва
-					a(href="#!").txt-24.chevron-link Для мужчин
+					a(href="#!").txt-24.chevron-link 
+						span Для мужчин
 						svg.svg-chevron-right
 							use(href='../img/sprite.svg#svg-chevron-right')
 					pre.
-						a(href="#!").txt-24.chevron-link Для мужчин
+						a(href="#!").txt-24.chevron-link 
+							span Для мужчин
 							svg.svg-chevron-right
 								use(href='./img/sprite.svg#svg-chevron-right')
+					a(href="#!").txt-24.chevron-link Для мужчин
+						svg.svg-chevron-left
+							use(href='../img/sprite.svg#svg-chevron-left')
+						span Вернуться
+					pre.
+						a(href="#!").txt-24.chevron-link Для мужчин
+							svg.svg-chevron-left
+								use(href='../img/sprite.svg#svg-chevron-left')
+							span Вернуться
+					
 					hr
 					.link-item Элемент ссылки с подчеркиванием
 					pre.
