--- a/src/pug/sections/_main-hero.pug
+++ b/src/pug/sections/_main-hero.pug
@@ -16,10 +16,12 @@ section.main-hero
 					.hero-slide__text
 						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
 						.center-group.mt-24(data-swiper-parallax-y="200")
-							a(href="#!").txt-24.chevron-link Для мужчин
+							a(href="catalogy.html").txt-24.chevron-link 
+								span Для мужчин
 								svg.svg-chevron-right
 									use(href='./img/sprite.svg#svg-chevron-right')
-							a(href="#!").txt-24.chevron-link Для женщин
+							a(href="catalogy.html").txt-24.chevron-link 
+								span Для женщин
 								svg.svg-chevron-right
 									use(href='./img/sprite.svg#svg-chevron-right')
 			//==== single slide =====
@@ -38,10 +40,12 @@ section.main-hero
 					.hero-slide__text
 						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
 						.center-group.mt-24(data-swiper-parallax-y="200")
-							a(href="#!").txt-24.chevron-link Для мужчин
+							a(href="catalogy.html").txt-24.chevron-link 
+								span Для мужчин
 								svg.svg-chevron-right
 									use(href='./img/sprite.svg#svg-chevron-right')
-							a(href="#!").txt-24.chevron-link Для женщин
+							a(href="catalogy.html").txt-24.chevron-link 
+								span Для женщин
 								svg.svg-chevron-right
 									use(href='./img/sprite.svg#svg-chevron-right')
 			//==== single slide =====
@@ -59,10 +63,12 @@ section.main-hero
 					.hero-slide__text
 						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
 						.center-group.mt-24(data-swiper-parallax-y="200")
-							a(href="#!").txt-24.chevron-link Для мужчин
+							a(href="catalogy.html").txt-24.chevron-link 
+								span Для мужчин
 								svg.svg-chevron-right
 									use(href='./img/sprite.svg#svg-chevron-right')
-							a(href="#!").txt-24.chevron-link Для женщин
+							a(href="catalogy.html").txt-24.chevron-link 
+								span Для женщин
 								svg.svg-chevron-right
 									use(href='./img/sprite.svg#svg-chevron-right')
 			//==== single slide =====
@@ -81,10 +87,12 @@ section.main-hero
 					.hero-slide__text
 						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
 						.center-group.mt-24(data-swiper-parallax-y="200")
-							a(href="#!").txt-24.chevron-link Для мужчин
+							a(href="catalogy.html").txt-24.chevron-link 
+								span Для мужчин
 								svg.svg-chevron-right
 									use(href='./img/sprite.svg#svg-chevron-right')
-							a(href="#!").txt-24.chevron-link Для женщин
+							a(href="catalogy.html").txt-24.chevron-link 
+								span Для женщин
 								svg.svg-chevron-right
 									use(href='./img/sprite.svg#svg-chevron-right')
 
