--- a/src/pug/sections/_catalogy-content.pug
+++ b/src/pug/sections/_catalogy-content.pug
@@ -1,9 +1,10 @@
 section.catalogy
 	.container
-		.breadcrumbs
-			a(href="#!") Главная
-			a(href="#!") Весна 2024 для мужчин
-			
+		.section-breadcrumbs
+			//====== хл крошки скрыты на моб версии ====
+			.breadcrumbs.d-md-none
+				a(href="#!") Главная
+				a(href="#!") Весна 2024 для мужчин
 		
 		.section-title
 			h1.h1-serif Весна 2024 для мужчин
