--- a/src/scss/sections/_main-hero.scss
+++ b/src/scss/sections/_main-hero.scss
@@ -44,7 +44,9 @@
 			}
 		}
 		@media (max-width: 1199px) {
-		bottom: 108px;
+			bottom: 108px;
+			width: 100%;
+			padding-inline:24px;
 		}
 	}
 
