fix-new-swiper-slide-settings

--- a/src/pug/sections/_catalogy-content.pug
+++ b/src/pug/sections/_catalogy-content.pug
@@ -1,11 +1,13 @@
 section.catalogy
 	.container
-		.section-breadcrumbs
-			//====== хл крошки скрыты на моб версии ====
-			.breadcrumbs.d-md-none
-				a(href="#!") Главная
-				a(href="#!") Весна 2024 для мужчин
-		
+		.breadcrumbs
+			a(href="#!") Главная
+			a(href="#!") Весна 2024 для мужчин
+			p
+				a(href="index.html").txt-24.chevron-link
+					svg.svg-chevron-left
+						use(href='../img/sprite.svg#svg-chevron-left')
+					span Вернуться
 		.section-title
 			h1.h1-serif Весна 2024 для мужчин
 			p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
