--- a/src/pug/ui/typography.pug
+++ b/src/pug/ui/typography.pug
@@ -113,12 +113,12 @@ html(lang="ru")
 							span Для мужчин
 							svg.svg-chevron-right
 								use(href='./img/sprite.svg#svg-chevron-right')
-					a(href="#!").txt-24.chevron-link Для мужчин
+					a(href="#!").txt-24.chevron-link
 						svg.svg-chevron-left
 							use(href='../img/sprite.svg#svg-chevron-left')
 						span Вернуться
 					pre.
-						a(href="#!").txt-24.chevron-link Для мужчин
+						a(href="#!").txt-24.chevron-link
 							svg.svg-chevron-left
 								use(href='../img/sprite.svg#svg-chevron-left')
 							span Вернуться
