--- a/src/scss/blocks/_breadcrumb.scss
+++ b/src/scss/blocks/_breadcrumb.scss
@@ -1,6 +1,6 @@
 .breadcrumbs{
 	margin-bottom: 40px;
-	a{
+	&>a{
 		position: relative;
 		text-transform: uppercase;
 		font-size: 14px;
@@ -20,15 +20,28 @@
 		}
 	}
 	
-	a:last-child{
+	&>a:last-of-type{
 		pointer-events: none;
 		color:var(--text-black);
 		cursor:default;
 	}
-	a:last-child{
+	a:last-of-type{
 		margin-right: 0;
 	}
-	a:last-child:after{
+	a:last-of-type:after{
 		display: none;
+	}
+	.chevron-link{
+		pointer-events: all;cursor:pointer;
+		display: none;
+		span{text-transform: uppercase; font-size: 14px;}
+		
+		@media (max-width: 1023px) {
+		 display: flex;
+		}
+	}
+	@media (max-width: 1023px) {
+		margin-bottom: 24px;
+		&>a{display: none;}
 	}
 }
