--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -16,5 +16,7 @@ block content
 				span Заявка принята!
 			a(href="catalogy.html")
 				span Каталог
+			a(href="single-product.html")
+				span Страница товара
 block variables
 	-var title = "Start page";
