--- a/src/pug/sections/_catalogy-content.pug
+++ b/src/pug/sections/_catalogy-content.pug
@@ -1,8 +1,10 @@
 section.catalogy
 	.container
 		.breadcrumbs
+			//===ссылки отображаются на десктоп версии и скрываются на < 1024px
 			a(href="#!") Главная
 			a(href="#!") Весна 2024 для мужчин
+			//===== этот пункт хлебных крошек отображается на экранах до 1024px
 			p
 				a(href="index.html").txt-24.chevron-link
 					svg.svg-chevron-left
