--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -105,6 +105,12 @@
 
 }
 $viewport: 1872px;
+@media (max-width: 1919px) {
+	$viewport: calc(100vw - 16px);
+}
+@media (max-width: 767px) {
+	$viewport: calc(100vw - 16px);
+}
 $column-width: calc($viewport / 12);
 .offset-1{
 	margin-left: calc($column-width * 1)!important;
