--- a/src/pug/mixins/_prod-card.pug
+++ b/src/pug/mixins/_prod-card.pug
@@ -23,7 +23,7 @@ mixin product(img)
 			a(href="single-product.ht").prod-card__title.d-flex
 				p.semi-16 Пуховик ЛАРС
 				.prod-card__price 45 000 ₽
-			.prod-colors
+			.product-colors
 				.color-item(style="background:#2E394D")
 				.color-item(style="background:#E3000F")
 				.color-item(style="background:#93AB42")
