add-product-info

--- a/src/pug/sections/_main-hero.pug
+++ b/src/pug/sections/_main-hero.pug
@@ -32,9 +32,9 @@ section.main-hero
 							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
 							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="https://bishkekvogue.ru/wp-content/uploads/2023/01/lanidor-21.jpg" type="image/jpg")
+							source(srcset="https://static.tildacdn.com/tild3739-3038-4462-b265-353563353332/765xNxcollezione-liu.jpg" type="image/jpg")
 							
-							img(src="https://bishkekvogue.ru/wp-content/uploads/2023/01/lanidor-21.jpg", alt="img")
+							img(src="https://static.tildacdn.com/tild3739-3038-4462-b265-353563353332/765xNxcollezione-liu.jpg", alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
@@ -79,9 +79,9 @@ section.main-hero
 							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
 							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="https://bishkekvogue.ru/wp-content/uploads/2023/01/lanidor-21.jpg" type="image/jpg")
+							source(srcset="https://www.familybritches.com/wp-content/uploads/2019/07/Depositphotos_5326134_l-2015.jpg" type="image/jpg")
 							
-							img(src="https://bishkekvogue.ru/wp-content/uploads/2023/01/lanidor-21.jpg", alt="img")
+							img(src="https://www.familybritches.com/wp-content/uploads/2019/07/Depositphotos_5326134_l-2015.jpg", alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
