--- a/src/pug/ui/product-card.pug
+++ b/src/pug/ui/product-card.pug
@@ -62,16 +62,16 @@ html(lang="ru")
 		block content
 			.container-dashboard
 				h2 Карточка продукта
-				.prod-colors
+				.product-colors
 					label.fake-input-label
 						input(type="radio" name="color-item")
-						span.fake-span(style="background:#2E394D")
+						span.color-item(style="background:#2E394D")
 
 					label.fake-input-label
 						input(type="radio" name="color-item")
-						span.fake-span(style="background:#E3000F")
+						span.color-item(style="background:#E3000F")
 
 					label.fake-input-label
 						input(type="radio" name="color-item")
-						span.fake-span(style="background:#93AB42")
+						span.color-item(style="background:#93AB42")
 				hr
