--- a/src/scss/base/_var.scss
+++ b/src/scss/base/_var.scss
@@ -9,3 +9,13 @@ $white: #ffffff;
 $reg: 'Inter';
 $serif: 'Roboto Serif';
 $suisse: 'SuisseIntl-Regular';
+$viewport: 1872px;
+@media (max-width: 1919px) {
+	$viewport: calc(100vw - 16px);
+}
+
+@media (max-width: 767px) {
+	$viewport: calc(100vw - 16px);
+}
+
+$column-width: calc($viewport / 12);
