--- a/src/scss/blocks/_product-card.scss
+++ b/src/scss/blocks/_product-card.scss
@@ -1,12 +1,18 @@
-.prod-colors{
+.product-colors{
 	display: flex;
 	align-items: center;
 	column-gap: 16px;
 	padding-bottom: 5px;
 }
+.product-title{
+	font-weight: 500;
+	text-transform: uppercase;
+	font-size: 24px;
+	line-height: 1.25;
+}
 .prod-card{
 	grid-column: span 3;
-	// width: auto;
+	
 	&__img{
 		width: 100%;
 		aspect-ratio: 45 / 64;
@@ -59,8 +65,6 @@
 		
 	}
 }
-
-
 .catalogy-content.content-grid{
 	.stretch-card {
 		grid-column: span 6;
