--- a/src/pug/sections/_single-product.pug
+++ b/src/pug/sections/_single-product.pug
@@ -102,6 +102,16 @@ section.single-product
 				.mb-60
 					a(href="#!").btn.w-100 Где купить?
 				//===== text======
-				.product-description
+				.product-description.mb-32
 					.txt-20 Описание
 					p Стильная куртка (с системой Climate-Comfort) имеет два наружных кармана с  открытыми молн иями. Два нижних кармана с клапанами на магнитах.  Клапана, при необходимости, убираются в карманы. Модель имеет съемный  капюшон. Внутренняя отделка капюшона выполнена из искусственного меха.  Мех можно отстегнуть. В поясничной области есть внутренняя кулиса.Модель  с системой климат-комфорта, сглаживает температурные колебания и  уменьшает парниковый эффект, что позволяет чувствовать себя комфортно в  любых условиях. Трикотажные манжеты в рукавах и регулируемый капюшон сохранит ваш  комфорт. Куртка имеет 3 внутренних кармана на молниях,один из которых  большой (планшет,документы, блокноты и т.д.) Светоотражающие элементы на  куртке сделают вас более заметными в темное время суток (ваша  безопасность...)
+				//====== DETAILS LIST ====
+				.product-details
+					.semi-16 Детали
+					ul.circle-list
+						li Влаго-ветро защитный капюшон
+						li Ветрозащитная молния
+						li Скрытый карман
+						li Список 4
+						li Список 5
+
