--- a/src/scss/sections/_single-product.scss
+++ b/src/scss/sections/_single-product.scss
@@ -20,6 +20,9 @@
 	
 	.txt-20{margin-bottom: 16px;}
 }
+.product-details{
+	.semi-16{margin-bottom: 16px;}
+}
 .single-product__info{
 	grid-column: span 5;
 	margin-left: calc($column-width * 1) !important;
