--- a/src/pug/sections/_single-product.pug
+++ b/src/pug/sections/_single-product.pug
@@ -106,7 +106,7 @@ section.single-product
 					.txt-20 Описание
 					p Стильная куртка (с системой Climate-Comfort) имеет два наружных кармана с  открытыми молн иями. Два нижних кармана с клапанами на магнитах.  Клапана, при необходимости, убираются в карманы. Модель имеет съемный  капюшон. Внутренняя отделка капюшона выполнена из искусственного меха.  Мех можно отстегнуть. В поясничной области есть внутренняя кулиса.Модель  с системой климат-комфорта, сглаживает температурные колебания и  уменьшает парниковый эффект, что позволяет чувствовать себя комфортно в  любых условиях. Трикотажные манжеты в рукавах и регулируемый капюшон сохранит ваш  комфорт. Куртка имеет 3 внутренних кармана на молниях,один из которых  большой (планшет,документы, блокноты и т.д.) Светоотражающие элементы на  куртке сделают вас более заметными в темное время суток (ваша  безопасность...)
 				//====== DETAILS LIST ====
-				.product-details
+				.product-details.mb-48
 					.semi-16 Детали
 					ul.circle-list
 						li Влаго-ветро защитный капюшон
@@ -114,4 +114,22 @@ section.single-product
 						li Скрытый карман
 						li Список 4
 						li Список 5
+
+				//=========acordion========
+				.accordion-group
+					//=======single item =====
+					.accordion-header.txt-20 Технологии и материалы
+					.accordion-body
+						a(href="#!").link-text Climate-Comfort
+						a(href="#!").link-text Светоотражающие элементы (дизайн NorthBloom)
+						a(href="#!").link-text Local Thermo
+						a(href="#!").link-text Утеплитель Valtherm (Италия)
+						a(href="#!").link-text Молния YKK (Япония)
+						a(href="#!").link-text Air Breathing
+						a(href="#!").link-text Внутренний карман Big Box
+						
+					//=======single item =====	
+					.accordion-header.txt-20 Вы работаете только с гражданами РФ?
+					.accordion-body
+						p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit nostrum error hic illum eius consequatur molestiae repellat fugiat quae porro cum excepturi nulla fugit, vero suscipit minus exercitationem quam veritatis!
 
