--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import "blocks/_header-search.scss";
 @import "blocks/_swiper.scss";
 
+
 @import "blocks/_cooki-popup.scss";
 @import "blocks/_product-card.scss";
 
@@ -21,6 +22,7 @@
 @import "sections/_main-hero.scss";
 
 @import "sections/_single-product.scss";
+@import "blocks/_acordeon.scss";
 
 @import "sections/_footer.scss";
 
