--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -19,8 +19,12 @@ html(lang="ru")
 		meta(name="theme-color", content="#ffffff")
 		//====убрать перевод цифр в номер телефона на ios  ======
 		meta(name="format-detection" content="telephone=no")
+		
 		//======= swiper slider ======
 		link(rel="stylesheet", href="./libs/swiper/swiper.min.css")
+		//============ fancybox =============
+		link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css")
+		
 		//======= main styles ======
 		link(rel="stylesheet", href="./css/main.css")
 		
@@ -77,5 +81,7 @@ html(lang="ru")
 		
 		//=============== swiper js ===================
 		script(src="./libs/swiper/swiper.js")
+		//============fancybox====================
+		script(src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js")
 		//=============== main js ===================
 		script(src="./js/main.js")
