--- a/src/pug/sections/_single-product.pug
+++ b/src/pug/sections/_single-product.pug
@@ -4,7 +4,7 @@ section.single-product
 			.single-product__gallery.content-grid 
 				//=====foto=====
 				.product-foto.product-foto--stretch
-					a(href="./img/laura@2x.webp")
+					a(href="./img/laura@2x.webp" data-fancybox="gallery")
 						picture
 							source(srcset="./img/laura-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/laura-w375.webp", media="(max-width: 767px)")
@@ -13,36 +13,40 @@ section.single-product
 							img(src="./img/laura.webp", width="924" alt="img")
 				//=====foto=====
 				.product-foto
-					picture
-						source(srcset="./img/hit-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
-						source(srcset="./img/hit-w375.webp", media="(max-width: 767px)")
-						source(srcset="./img/hit@2x.webp", media="(min-resolution: 192dpi)")
-						source(srcset="./img/hit.webp" type="image/webp")
-						img(src="./img/hit.webp", width="450" alt="img")
+					a(href="./img/hit.webp" data-fancybox="gallery")
+						picture
+							source(srcset="./img/hit-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
+							source(srcset="./img/hit-w375.webp", media="(max-width: 767px)")
+							source(srcset="./img/hit@2x.webp", media="(min-resolution: 192dpi)")
+							source(srcset="./img/hit.webp" type="image/webp")
+							img(src="./img/hit.webp", width="450" alt="img")
 				//=====foto=====
 				.product-foto
-					picture
-						source(srcset="./img/laura-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
-						source(srcset="./img/laura-w375.webp", media="(max-width: 767px)")
-						source(srcset="./img/laura@2x.webp", media="(min-resolution: 192dpi)")
-						source(srcset="./img/laura.webp" type="image/webp")
-						img(src="./img/laura.webp", width="450" alt="img")
+					a(href="./img/laura.webp" data-fancybox="gallery")
+						picture
+							source(srcset="./img/laura-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
+							source(srcset="./img/laura-w375.webp", media="(max-width: 767px)")
+							source(srcset="./img/laura@2x.webp", media="(min-resolution: 192dpi)")
+							source(srcset="./img/laura.webp" type="image/webp")
+							img(src="./img/laura.webp", width="450" alt="img")
 				//=====foto=====
 				.product-foto
-					picture
-						source(srcset="./img/laura-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
-						source(srcset="./img/laura-w375.webp", media="(max-width: 767px)")
-						source(srcset="./img/laura@2x.webp", media="(min-resolution: 192dpi)")
-						source(srcset="./img/laura.webp" type="image/webp")
-						img(src="./img/laura.webp", width="450" alt="img")
+					a(href="./img/laura.webp" data-fancybox="gallery")
+						picture
+							source(srcset="./img/laura-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
+							source(srcset="./img/laura-w375.webp", media="(max-width: 767px)")
+							source(srcset="./img/laura@2x.webp", media="(min-resolution: 192dpi)")
+							source(srcset="./img/laura.webp" type="image/webp")
+							img(src="./img/laura.webp", width="450" alt="img")
 				//=====foto=====
 				.product-foto
-					picture
-						source(srcset="./img/hit-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
-						source(srcset="./img/hit-w375.webp", media="(max-width: 767px)")
-						source(srcset="./img/hit@2x.webp", media="(min-resolution: 192dpi)")
-						source(srcset="./img/hit.webp" type="image/webp")
-						img(src="./img/hit.webp", width="450" alt="img")
+					a(href="./img/hit.webp" data-fancybox="gallery")
+						picture
+							source(srcset="./img/hit-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
+							source(srcset="./img/hit-w375.webp", media="(max-width: 767px)")
+							source(srcset="./img/hit@2x.webp", media="(min-resolution: 192dpi)")
+							source(srcset="./img/hit.webp" type="image/webp")
+							img(src="./img/hit.webp", width="450" alt="img")
 			
 			//====Правая колонка с описанием =====
 			.single-product__info
