--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,7 @@
 
 @import "sections/_single-product.scss";
 @import "blocks/_acordeon.scss";
+@import "blocks/_fancybox.scss";
 
 @import "sections/_footer.scss";
 
