adapt-single-page

--- a/src/pug/pages/single-product.pug
+++ b/src/pug/pages/single-product.pug
@@ -3,7 +3,7 @@ extends ../layouts/layout.pug
 block content
 	.page-wrapper.page-wrapper--white
 		include ../sections/_header
-		main.inner-main
+		main.inner-main.pt-md-0
 
 			include ../sections/_single-product
 
