--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,5 +1,5 @@
 //====== HEADER=====
-header.header#header
+header.header#header.header--special
 	include ../blocks/_header-search
 	.header-container.d-flex
 		//===LOGO====
