--- a/src/pug/sections/_single-product.pug
+++ b/src/pug/sections/_single-product.pug
@@ -1,29 +1,31 @@
-section.single-product
+section.single-product.pt-md-0
+	//=====slider на моб версии =======
+	.single-product__gallery.d-none.d-md-block
+		.swiper.slider
+			.swiper-wrapper
+				//====slide====
+				.swiper-slide
+					a(href="./img/laura-w375@2x.webp" data-fancybox="gallery-mob").swiper-gallery__img
+						img.lazy(src="./img/laura-w375@2x.webp", width="450" height="640" alt="img")
+				//====slide====
+				.swiper-slide
+					a(href="./img/hit-w375@2x.webp" data-fancybox="gallery-mob").swiper-gallery__img
+						img.lazy(src="./img/hit-w375@2x.webp", width="450" height="640" alt="img")
+				//====slide====
+				.swiper-slide
+					a(href="./img/laura-w375@2x.webp" data-fancybox="gallery-mob").swiper-gallery__img
+						img.lazy(src="./img/laura-w375@2x.webp", width="450" height="640" alt="img")
+				//====slide====
+				.swiper-slide
+					a(href="./img/hit-w375@2x.webp" data-fancybox="gallery-mob").swiper-gallery__img
+						img.lazy(src="./img/hit-w375@2x.webp", width="450" height="640" alt="img")
+			
+			//==== pagination===
+			.swiper-pagination.slider-pagination
+	
 	.container
 		.content-grid.single-product-grid
-			//=====slider на моб версии =======
-			.single-product__gallery.d-none.d-md-block
-				.swiper.slider
-					.swiper-wrapper
-						//====slide====
-						.swiper-slide
-							a(href="./img/laura@2x.webp" data-fancybox="gallery-mob").prod-card__img
-								img.lazy(src="./img/laura@2x.webp", width="450" height="640" alt="img")
-						//====slide====
-						a(href="./img/laura@2x.webp" data-fancybox="gallery-mob").swiper-slide
-							.prod-card__img
-								img.lazy(src="./img/laura@2x.webp", width="450" height="640" alt="img")
-						//====slide====
-						a(href="./img/laura@2x.webp" data-fancybox="gallery-mob").swiper-slide
-							.prod-card__img
-								img.lazy(src="./img/laura@2x.webp", width="450" height="640" alt="img")
-						//====slide====
-						a(href="./img/laura@2x.webp" data-fancybox="gallery-mob").swiper-slide
-							.prod-card__img
-								img.lazy(src="./img/laura@2x.webp", width="450" height="640" alt="img")
-					//==== pagination===
-					.swiper-pagination.slider-pagination
-			//=====сетка на экранах от 768 версии =======
+			//=====галерея товаров на экранах от 768 версии =======
 			.single-product__gallery.content-grid.d-grid.d-md-none
 				//=====foto=====
 				.product-foto.product-foto--stretch
@@ -74,7 +76,7 @@ section.single-product
 			//====Правая колонка с описанием =====
 			.single-product__info
 				//===breadcrumbs====
-				.breadcrumbs
+				.breadcrumbs.d-md-none
 					//===ссылки отображаются на десктоп версии и скрываются на < 1024px
 					a(href="#!") Главная
 					a(href="#!") Весна 2024 для женщин
