--- a/src/scss/sections/_single-product.scss
+++ b/src/scss/sections/_single-product.scss
@@ -9,6 +9,19 @@
 	@media (max-width: 767px) {
 		grid-column: span 12;
 		position: relative;
+		.swiper{padding-bottom: 0;}
+		.swiper img{
+			width: 100%;
+			height: 100dvh;
+			max-height: 667px;
+			object-fit: cover;
+		}
+		.swiper .swiper-pagination{
+			bottom: 40px!important;
+			.swiper-pagination-bullet{background: var(--text-black); opacity:1}
+			.swiper-pagination-bullet-active{background: #6f6f6f; }
+			
+		}
 		
 	}
 }
@@ -42,6 +55,7 @@
 	@media (max-width: 767px) {
 		grid-column: span 12;
 		position: relative;
+		padding-top: 40px;
 		
 	}
 }
