--- a/src/scss/sections/_single-product.scss
+++ b/src/scss/sections/_single-product.scss
@@ -22,6 +22,9 @@
 			.swiper-pagination-bullet-active{background: #6f6f6f; }
 			
 		}
+		.swiper-gallery__img{
+			background-color: #cecece;
+		}
 		
 	}
 }
