--- a/src/pug/mixins/_prod-card.pug
+++ b/src/pug/mixins/_prod-card.pug
@@ -20,7 +20,7 @@ mixin product(img)
 			.swiper-pagination.slider-pagination
 		//=====product info=====
 		.prod-card__footer.gap-16
-			a(href="single-product.ht").prod-card__title.d-flex
+			a(href="single-product.html").prod-card__title.d-flex
 				p.semi-16 Пуховик ЛАРС
 				.prod-card__price 45 000 ₽
 			.product-colors
