--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -4,7 +4,7 @@ header.header#header.header--special
 	.header-container.d-flex
 		//===LOGO====
 		.header-left-col
-			a(href="#!").logo.logo--white
+			a(href="index.html").logo.logo--white
 				+svg-icon('logo')
 		//=== MENU WRAPPER =====
 		.header-menu-wrapper#menu
