--- a/src/pug/sections/_single-product.pug
+++ b/src/pug/sections/_single-product.pug
@@ -78,8 +78,8 @@ section.single-product.pt-md-0
 				//===breadcrumbs====
 				.breadcrumbs.d-md-none
 					//===ссылки отображаются на десктоп версии и скрываются на < 1024px
-					a(href="#!") Главная
-					a(href="#!") Весна 2024 для женщин
+					a(href="index.html") Главная
+					a(href="catalogy.html") Весна 2024 для женщин
 					a(href="#!") Пуховик
 					
 				
@@ -121,7 +121,7 @@ section.single-product.pt-md-0
 							p -5° -15°
 					
 					//===== таблица размеров =====
-					button.link-text.size-table-link Таблица размеров
+					button.link-text.size-table-link(data-target="size-table") Таблица размеров
 				//===== BUTTON =====
 				.mb-60
 					a(href="#!").btn.w-100 Где купить?
@@ -157,3 +157,52 @@ section.single-product.pt-md-0
 					.accordion-body
 						p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit nostrum error hic illum eius consequatur molestiae repellat fugiat quae porro cum excepturi nulla fugit, vero suscipit minus exercitationem quam veritatis!
 
+//- mixin tr
+//- 	- var n=44
+//- 	- var k=88
+//- 	- var l=68
+//- 	- var m=96
+//- 	while n < 69 && k < 137 && l < 124 && m < 145
+//- 		tr
+//- 			th n + = 4
+//- 			th 164 - 172
+//- 			th k + =4
+//- 			th l + =4
+//- 			th m + =4
+
+mixin tableRows(values, numRows)
+	if values.length !== 5
+		throw new Error('The array must contain exactly 5 numbers')
+	tbody
+		each rowIndex in [...Array(numRows).keys()]
+			tr
+				each value, index in values
+					- const cellValue = index === 1 ? ' 164 - 172' : value + rowIndex * 4
+					td= cellValue
+
+		
+	
+.modal-wrapper.size-table-wrapper(data-modal="size-table")
+	
+	.modal-body
+		
+		//===btn close popup ===
+		button(type="button" data-role="modal-close").btn-close
+			svg.svg-close
+				use(href='./img/sprite.svg#svg-close')
+		//==== title-block ====	
+		.section-title
+			.h1-serif Таблицы размеров
+			p Размерная сетка курток NorthBloom соответствует российским стандартным размерам одежды.
+			p Предложенные таблицы помогут Вам подобрать куртку подходящего размера.
+
+		table.size-table(cellspacing="0")
+			thead
+				tr
+					th Размер
+					th Рост
+					th Обхват груди
+					th Обхват талии
+					th Обхват бёдер
+			+tableRows([44, 88, 88, 68, 96], 13)
+				
