--- a/src/scss/blocks/_cooki-popup.scss
+++ b/src/scss/blocks/_cooki-popup.scss
@@ -4,22 +4,23 @@
 	padding: 48px 16px 32px;
 	background: var(--bg-bg-grey);
 	width: min(600px, calc(100% - 48px));
-	.btn-close{
-		position: absolute;
-		top: 16px;
-		right: 16px;
-		z-index: 3;
-		svg{transition: .3s;}
-		 
-		&:hover{
-			svg{transform: scale(1.2);}
-			
-		}
-	}
+	
 	@media (max-width: 1023px) {
 	width: min(600px, calc(100% - 32px));
 	}
 
+}
+.popup-wrapper .btn-close, .modal-wrapper .btn-close{
+	position: absolute;
+	top: 16px;
+	right: 16px;
+	z-index: 3;
+	svg{transition: .3s;}
+		
+	&:hover{
+		svg{transform: scale(1.2);}
+		
+	}
 }
 .cooki-popup{
 	position: fixed;
