--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import "blocks/_header-menu.scss";
 @import "blocks/_header-search.scss";
 @import "blocks/_swiper.scss";
+@import "blocks/_modal.scss";
 
 
 @import "blocks/_cooki-popup.scss";
