--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -22,6 +22,8 @@ html(lang="ru")
 		
 		//======= swiper slider ======
 		link(rel="stylesheet", href="./libs/swiper/swiper.min.css")
+		//======= custom scroll ======
+		link(rel="stylesheet", href="./libs/scroll/scroll.css")
 		//============ fancybox =============
 		link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css")
 		
@@ -76,11 +78,13 @@ html(lang="ru")
 		
 		block content
 		
-		//=============== jquery ===================
+		//=============== jquery ==================
 		script(src="./libs/jquery/jquery-3.0.0.min.js")
 		
-		//=============== swiper js ===================
+		//=============== swiper js ===============
 		script(src="./libs/swiper/swiper.js")
+		//===============  custom scroll ===============
+		script(src="./libs/scroll/scroll.min.js")
 		//============fancybox====================
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js")
 		//=============== main js ===================
