--- a/src/scss/base/_vendore-class.scss
+++ b/src/scss/base/_vendore-class.scss
@@ -34,11 +34,22 @@
 	}
 }
 .section-title,.gap-16{&>*+*{margin-top: 16px;}}
+.section-title{
+	p+p {
+		margin-top: 0;
+	}
+}
 
 .section-title{
 	width: min(924px, 100%);
 	margin-bottom: 60px;
 }
+.scroll-wrapper{
+	width: 100%;
+	overflow: hidden;
+	
+}
+
 .mt-8{
 	margin-top: 8px;
 }
