--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @import "sections/_single-product.scss";
 @import "blocks/_acordeon.scss";
 @import "blocks/_fancybox.scss";
+@import "blocks/_size-table.scss";
 
 @import "sections/_footer.scss";
 
