--- a/src/scss/blocks/_size-table.scss
+++ b/src/scss/blocks/_size-table.scss
@@ -4,7 +4,7 @@
 	height: 100%;
 	overflow-y: auto;
 	@media (max-width: 767px) {
-		padding-block: 56px;
+		padding-block: 56px 0;
 		.ss-wrapper {
 			width: calc(50% + 50vw);
 		}
@@ -14,7 +14,7 @@
 .size-table{
 	table-layout: fixed;
 	width: auto;
-	@media (max-width: 767px) {
+	@media (max-width: 1199px) {
 		margin-right: 30px;
 	}
 	
