--- a/src/pug/sections/_single-product.pug
+++ b/src/pug/sections/_single-product.pug
@@ -1,6 +1,6 @@
 section.single-product.pt-md-0
 	//=====slider на моб версии =======
-	.single-product__gallery.d-none.d-md-block
+	.single-product__gallery.d-none.d-sm-block
 		.swiper.slider
 			.swiper-wrapper
 				//====slide====
@@ -26,7 +26,7 @@ section.single-product.pt-md-0
 	.container
 		.content-grid.single-product-grid
 			//=====галерея товаров на экранах от 768 версии =======
-			.single-product__gallery.content-grid.d-grid.d-md-none
+			.single-product__gallery.content-grid.d-grid.d-sm-none
 				//=====foto=====
 				.product-foto.product-foto--stretch
 					a(href="./img/laura@2x.webp" data-fancybox="gallery")
