--- a/src/scss/sections/_single-product.scss
+++ b/src/scss/sections/_single-product.scss
@@ -10,10 +10,14 @@
 		grid-column: span 12;
 		position: relative;
 		.swiper{padding-bottom: 0;}
+		.swiper	.swiper-slide a{
+			display: block;
+			width: 100%;
+			aspect-ratio: 75 / 132
+		}
 		.swiper img{
 			width: 100%;
-			height: 100dvh;
-			max-height: 667px;
+			height: 100%;
 			object-fit: cover;
 		}
 		.swiper .swiper-pagination{
