--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -18,5 +18,7 @@ block content
 				span Каталог
 			a(href="single-product.html")
 				span Страница товара
+			a(href="technology.html")
+				span Материалы и технологии
 block variables
 	-var title = "Start page";
