--- a/src/scss/blocks/_acordeon.scss
+++ b/src/scss/blocks/_acordeon.scss
@@ -47,7 +47,18 @@
 }
 
 .accordion-header.open::after {
-	
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M18 15L12 9L6 15' stroke='%23222222' stroke-linecap='round' /%3e%3c/svg%3e");
 	
+}
+.accordion-group.accordion-group--light{
+	border: none;
+	.accordion-body, .accordion-header{border: none;}
+	.accordion-header{padding: 8px 0;}
+	.accordion-header::after{
+		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12 6L12 18' stroke='%23222222' stroke-linecap='round' /%3e%3cpath d='M18 12L6 12' stroke='%23222222' stroke-linecap='round' /%3e%3c/svg%3e");
+	}
+	.accordion-header.open::after{
+		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M6 12H18' stroke='%23222222' stroke-linecap='round' /%3e%3c/svg%3e");
+	}
+	.accordion-body{padding-top: 8px; padding-bottom: 40px;}
 }
