--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,6 +27,9 @@
 @import "blocks/_fancybox.scss";
 @import "blocks/_size-table.scss";
 
+@import "sections/_technology-content.scss";
+
+
 @import "sections/_footer.scss";
 
 
