--- a/src/pug/sections/_technology-content.pug
+++ b/src/pug/sections/_technology-content.pug
@@ -38,11 +38,19 @@ section.technology
 					.accordion-header.txt-20 Наши технологии  (название ролика 1)
 					.accordion-body
 						.video-wrapper
-							video.video.lazy( playsinline poster="./img/poster.webp")
+							video.video.lazy( playsinline)
 								source(src="./video/video.mp4", type="video/mp4")
 							//==== btn play ====
 							button.btn-play
+							.video-poster
+								img.lazy.img-cover(src="./img/poster.webp")
 					//=======single item =====	
-					.accordion-header.txt-20 Вы работаете только с гражданами РФ?
+					.accordion-header.txt-20 Наши технологии  (название ролика 1)
 					.accordion-body
-						p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit nostrum error hic illum eius consequatur molestiae repellat fugiat quae porro cum excepturi nulla fugit, vero suscipit minus exercitationem quam veritatis!
+						.video-wrapper
+							video.video.lazy( playsinline)
+								source(src="./video/video.mp4", type="video/mp4")
+							//==== btn play ====
+							button.btn-play
+							.video-poster
+								img.lazy.img-cover(src="./img/poster.webp")
